# lambda-testing

./: .env  Dockerfile.dev  Makefile  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: basic-testing-integration-tests.yml  basic-testing-unit-tests.yml  integration-tests.yml  unit-tests.yml
basic-testing/: Dockerfile  Makefile
basic-testing/src/: main.py
basic-testing/src/tests/integration_tests/: test_handler.py
basic-testing/terraform/: .terraform.lock.hcl  lambda.tf  providers.tf
s3-notifications/: main.py  pyproject.toml
s3-notifications/src/: __init__.py  _types.py  main.py  read.py  store.py  transform.py
s3-notifications/tests/unit/: test_store.py
src/tests/unit_tests/: test_handler.py
terraform/: .gitignore  vars.tf
