[project]
name = "lambda-testing-s3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.24",
    "moto>=5.1.19",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
